feat: 添加简易的user 模块
