# swagger/swagger.yml
@@ -156,6 +156,150 @@ paths:
               $ref: '#/definitions/models.Test'
         "500":
           description: 获取数据失败
+  /user/:
+    get:
+      tags:
+      - user
+      description: |-
+        获取所有测试数据
+        <br>
+      operationId: UserController.获取所有测试数据
+      responses:
+        "200":
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.User'
+        "500":
+          description: 获取数据失败
+    post:
+      tags:
+      - user
+      description: |-
+        创建一条测试数据
+        <br>
+      operationId: UserController.创建测试数据
+      parameters:
+      - in: body
+        name: body
+        description: 传入的测试数据
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      responses:
+        "201":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: 请求体格式错误
+        "500":
+          description: 创建数据失败
+  /user/{id}:
+    get:
+      tags:
+      - user
+      description: |-
+        根据ID获取单条测试数据
+        <br>
+      operationId: UserController.获取指定测试数据
+      parameters:
+      - in: path
+        name: id
+        description: 测试数据ID
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: 无效的ID
+        "404":
+          description: 数据不存在
+    put:
+      tags:
+      - user
+      description: |-
+        更新指定ID的测试数据
+        <br>
+      operationId: UserController.更新测试数据
+      parameters:
+      - in: path
+        name: id
+        description: 测试数据ID
+        required: true
+        type: integer
+        format: int64
+      - in: body
+        name: body
+        description: 更新后的测试数据
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: 请求体格式错误
+        "404":
+          description: 数据不存在
+        "500":
+          description: 更新失败
+    delete:
+      tags:
+      - user
+      description: |-
+        根据ID删除测试数据
+        <br>
+      operationId: UserController.删除测试数据
+      parameters:
+      - in: path
+        name: id
+        description: 测试数据ID
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "204":
+          description: '{string} 空'
+        "400":
+          description: 无效的ID
+        "404":
+          description: 数据不存在
+  /user/page:
+    get:
+      tags:
+      - user
+      description: |-
+        获取所有测试数据
+        <br>
+      operationId: UserController.获取所有测试数据
+      parameters:
+      - in: query
+        name: page
+        description: 页码，默认 1
+        type: integer
+        format: int64
+      - in: query
+        name: pageSize
+        description: 每页数量，默认 10
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.User'
+        "500":
+          description: 获取数据失败
 definitions:
   models.Test:
     title: Test
@@ -168,4 +312,15 @@ definitions:
         type: integer
         format: int64
       name:
+        type: string
+  models.User:
+    title: User
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+      password:
+        type: string
+      userName:
         type: string
